# Markpad

./: .gitignore  CHANGELOG.md  FUNDING.yml  README.md  THIRD_PARTY_LICENSES.md  package-lock.json  package.json  snapcraft.yaml  svelte.config.js  vite.config.js  vitest.config.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  grammar_config.json  grammar_info.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/capabilities-dev/: dev-connector.json
src-tauri/icons/: icon.icns
src-tauri/queries/_typescript/: highlights.scm
src-tauri/queries/cpp/: highlights.scm
src-tauri/queries/debian/: highlights.scm
src-tauri/queries/ghostty/ghostty/: highlights.scm
src-tauri/queries/glimmer-javascript/: highlights.scm
src-tauri/queries/gnuplot/: highlights.scm
src-tauri/queries/go-format-string/go/: injections.scm
src-tauri/queries/go-format-string/go-format-string/: highlights.scm
src-tauri/queries/hare/: highlights.scm  indents.scm  locals.scm
src-tauri/queries/less/: highlights.scm
src-tauri/queries/lua-format-string/lua/: injections.scm
src-tauri/queries/lua-format-string/luau/: injections.scm
src-tauri/queries/mojo/: highlights.scm
src-tauri/queries/pest/: highlights.scm
src-tauri/queries/picat/: tags.scm
src-tauri/queries/shellcheckrc/: highlights.scm
src-tauri/queries/slisp/: highlights.scm
src-tauri/queries/t32/: highlights.scm
src-tauri/queries/typescript/: highlights.scm
src-tauri/src/: lib.rs  main.rs  pdf.rs  setup.rs
src-tauri/src/highlight/: mod.rs  registry.rs
src-tauri/src/highlight/themes/: mod.rs  (+3 more)
(+56 files in other folders)
