[package]
name = "Markpad"
version = "2.3.1"
description = "Simple Markdown viewer and text editor"
authors = ["you"]
edition = "2021"

[[bin]]
name = "Markpad"
path = "src/main.rs"

[lib]
name = "markpad_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1"

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
comrak = "0.18"
serde_json = "1"
tauri-plugin-prevent-default = "2.0.0-rc.1"
notify = "6"

directories = "5"
opener = { version = "0.7", features = ["reveal"] }
chrono = "0.4"
env_logger = "0.11.8"
log = "0.4.29"

# Tree-sitter for syntax highlighting (built from source)
tree-sitter = "0.25"
tree-sitter-language = "0.1"
tree-sitter-highlight = "0.25"
lazy_static = "1.4"
phf = { version = "0.11", features = ["macros"] }

# Embed queries files into binary for single-exe distribution
include_dir = "0.7"

[target.'cfg(windows)'.dependencies]
mslnk = "0.1"
winreg = "0.52"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
